fix confermaRicezione e cambio numero porta
Modificata la porta del server per rientrare nel range di porte libere.
controlloRicezione viene ora controllato fuori dal switch per non avere ridondanza